; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderergl1/extr_tr_cmds.c_R_SetColorMode.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderergl1/extr_tr_cmds.c_R_SetColorMode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_TRUE = common dso_local global i32 0, align 4
@MODE_MAX = common dso_local global i32 0, align 4
@STEREO_LEFT = common dso_local global i64 0, align 8
@STEREO_RIGHT = common dso_local global i64 0, align 8
@MODE_GREEN_MAGENTA = common dso_local global i32 0, align 4
@GL_FALSE = common dso_local global i32 0, align 4
@MODE_RED_BLUE = common dso_local global i32 0, align 4
@MODE_RED_GREEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @R_SetColorMode(i32* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @GL_TRUE, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 3
  store i32 %7, i32* %9, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 2
  store i32 %7, i32* %11, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 1
  store i32 %7, i32* %13, align 4
  %14 = load i32*, i32** %4, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 0
  store i32 %7, i32* %15, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @MODE_MAX, align 4
  %18 = icmp sgt i32 %16, %17
  br i1 %18, label %19, label %36

19:                                               ; preds = %3
  %20 = load i64, i64* %5, align 8
  %21 = load i64, i64* @STEREO_LEFT, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %19
  %24 = load i64, i64* @STEREO_RIGHT, align 8
  store i64 %24, i64* %5, align 8
  br label %32

25:                                               ; preds = %19
  %26 = load i64, i64* %5, align 8
  %27 = load i64, i64* @STEREO_RIGHT, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %25
  %30 = load i64, i64* @STEREO_LEFT, align 8
  store i64 %30, i64* %5, align 8
  br label %31

31:                                               ; preds = %29, %25
  br label %32

32:                                               ; preds = %31, %23
  %33 = load i32, i32* @MODE_MAX, align 4
  %34 = load i32, i32* %6, align 4
  %35 = sub nsw i32 %34, %33
  store i32 %35, i32* %6, align 4
  br label %36

36:                                               ; preds = %32, %3
  %37 = load i32, i32* %6, align 4
  %38 = load i32, i32* @MODE_GREEN_MAGENTA, align 4
  %39 = icmp eq i32 %37, %38
  br i1 %39, label %40, label %60

40:                                               ; preds = %36
  %41 = load i64, i64* %5, align 8
  %42 = load i64, i64* @STEREO_LEFT, align 8
  %43 = icmp eq i64 %41, %42
  br i1 %43, label %44, label %50

44:                                               ; preds = %40
  %45 = load i32, i32* @GL_FALSE, align 4
  %46 = load i32*, i32** %4, align 8
  %47 = getelementptr inbounds i32, i32* %46, i64 2
  store i32 %45, i32* %47, align 4
  %48 = load i32*, i32** %4, align 8
  %49 = getelementptr inbounds i32, i32* %48, i64 0
  store i32 %45, i32* %49, align 4
  br label %59

50:                                               ; preds = %40
  %51 = load i64, i64* %5, align 8
  %52 = load i64, i64* @STEREO_RIGHT, align 8
  %53 = icmp eq i64 %51, %52
  br i1 %53, label %54, label %58

54:                                               ; preds = %50
  %55 = load i32, i32* @GL_FALSE, align 4
  %56 = load i32*, i32** %4, align 8
  %57 = getelementptr inbounds i32, i32* %56, i64 1
  store i32 %55, i32* %57, align 4
  br label %58

58:                                               ; preds = %54, %50
  br label %59

59:                                               ; preds = %58, %44
  br label %97

60:                                               ; preds = %36
  %61 = load i64, i64* %5, align 8
  %62 = load i64, i64* @STEREO_LEFT, align 8
  %63 = icmp eq i64 %61, %62
  br i1 %63, label %64, label %70

64:                                               ; preds = %60
  %65 = load i32, i32* @GL_FALSE, align 4
  %66 = load i32*, i32** %4, align 8
  %67 = getelementptr inbounds i32, i32* %66, i64 2
  store i32 %65, i32* %67, align 4
  %68 = load i32*, i32** %4, align 8
  %69 = getelementptr inbounds i32, i32* %68, i64 1
  store i32 %65, i32* %69, align 4
  br label %96

70:                                               ; preds = %60
  %71 = load i64, i64* %5, align 8
  %72 = load i64, i64* @STEREO_RIGHT, align 8
  %73 = icmp eq i64 %71, %72
  br i1 %73, label %74, label %95

74:                                               ; preds = %70
  %75 = load i32, i32* @GL_FALSE, align 4
  %76 = load i32*, i32** %4, align 8
  %77 = getelementptr inbounds i32, i32* %76, i64 0
  store i32 %75, i32* %77, align 4
  %78 = load i32, i32* %6, align 4
  %79 = load i32, i32* @MODE_RED_BLUE, align 4
  %80 = icmp eq i32 %78, %79
  br i1 %80, label %81, label %85

81:                                               ; preds = %74
  %82 = load i32, i32* @GL_FALSE, align 4
  %83 = load i32*, i32** %4, align 8
  %84 = getelementptr inbounds i32, i32* %83, i64 1
  store i32 %82, i32* %84, align 4
  br label %94

85:                                               ; preds = %74
  %86 = load i32, i32* %6, align 4
  %87 = load i32, i32* @MODE_RED_GREEN, align 4
  %88 = icmp eq i32 %86, %87
  br i1 %88, label %89, label %93

89:                                               ; preds = %85
  %90 = load i32, i32* @GL_FALSE, align 4
  %91 = load i32*, i32** %4, align 8
  %92 = getelementptr inbounds i32, i32* %91, i64 2
  store i32 %90, i32* %92, align 4
  br label %93

93:                                               ; preds = %89, %85
  br label %94

94:                                               ; preds = %93, %81
  br label %95

95:                                               ; preds = %94, %70
  br label %96

96:                                               ; preds = %95, %64
  br label %97

97:                                               ; preds = %96, %59
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
